# llama.cpp

./: CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  convert_reka_vlm_to_gguf.py  pulls.ndjson
.devops/: intel.Dockerfile
.devops/nix/: package.nix
.github/scripts/: fetch-upstream-prs.sh  sync-loci-main.sh  sync-upstream.sh
.github/workflows/: build-android.yml  build.yml  docker.yml  loci-analysis.yml  release.yml  server.yml  sync-upstream-prs.yml  sync-upstream.yml  winget.yml
common/: CMakeLists.txt  arg.cpp  chat-auto-parser-generator.cpp  chat-auto-parser-helpers.h  chat-diff-analyzer.cpp  chat-parser.cpp  chat-peg-parser.cpp  chat-reka.cpp  chat-reka.h  chat.cpp  chat.h  common.cpp  common.h  download.cpp  download.h  hf-cache.cpp  hf-cache.h  json-schema-to-grammar.cpp  ngram-map.cpp  reasoning-budget.cpp  sampling.cpp
common/jinja/: runtime.cpp  value.cpp  value.h
docs/: build.md  docker.md  ops.md
docs/backend/: OPENCL.md
examples/debug/: debug.cpp
examples/simple/: simple.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml.h  gguf.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-meta.cpp  ggml-backend.cpp  ggml-common.h  ggml-impl.h  ggml-quants.c  ggml-quants.h  ggml.c  gguf.cpp
ggml/src/ggml-blas/: ggml-blas.cpp
ggml/src/ggml-cann/: CMakeLists.txt  acl_tensor.cpp  (+4 more)
gguf-py/gguf/: constants.py  gguf_writer.py  tensor_mapping.py
grammars/: README.md
include/: llama.h
locales/: README.ru.md
scripts/: quantize_reka_q4_last8_q8.sh  sync_vendor.py
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-chat.cpp  llama-chat.h  llama-context.cpp  llama-context.h  llama-grammar.cpp  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-kv-cache-iswa.cpp  llama-kv-cache-paged.cpp  llama-kv-cache-paged.h  llama-kv-cache.cpp  llama-mmap.cpp  llama-mmap.h  llama-model-from-safetensors.cpp  llama-model-from-safetensors.h  llama-model-loader.cpp  llama-model-loader.h  llama-model-saver.cpp  llama-model.cpp  llama-model.h  llama-quant.cpp  llama-safetensors-loader.cpp  llama-safetensors-types.cpp  llama-sampling.cpp  llama-vocab.cpp  llama.cpp  unicode.cpp
src/models/: delta-net-base.cpp  gemma3n-iswa.cpp  gemma4-iswa.cpp  graph-context-mamba.cpp  llama.cpp  models.h  qwen35.cpp  qwen35moe.cpp  qwen3next.cpp  qwen3vl-moe.cpp
tests/: CMakeLists.txt  test-backend-ops.cpp  test-chat-template.cpp  test-chat.cpp  test-gguf.cpp  test-grammar-integration.cpp  test-init-fail.cpp  test-llama-archs.cpp  test-quantize-fns.cpp  test-tokenizer-random.py
tools/cli/: README.md  cli.cpp
tools/completion/: README.md  completion.cpp
tools/fit-params/: fit-params.cpp
tools/llama-bench/: llama-bench.cpp
tools/mtmd/: CMakeLists.txt  clip-impl.h  clip-model.h  clip.cpp  mtmd-cli.cpp  mtmd-helper.cpp  mtmd.cpp  mtmd.h
tools/quantize/: quantize.cpp
tools/run/: CMakeLists.txt  run-chat.cpp  run.cpp
tools/server/: README-dev.md  README.md  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-http.cpp  server-models.cpp  server-task.cpp  server-task.h  server.cpp
(+127 files in other folders)
